added link to netlify site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.44/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -17,9 +19,13 @@
         <a href="https://www.linkedin.com/in/charul-bhalerao/" target="_blank">
           Charul Bhalerao</a
         >, is
-        <a href="" target="_blank"> open-sourced on Github</a>
+        <a href="https://github.com/bhaleraocharul/world-clock" target="_blank">
+          open-sourced on Github</a
+        >
         and hosted on
-        <a href="" target="_blank">Netlify</a>
+        <a href="https://world-clock-cb.netlify.app/" target="_blank"
+          >Netlify</a
+        >
       </p>
     </footer>
     <script src="src/app.js"></script>
