style the project with css & updated the html

--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
         </select>
 
         <div class="cities">
-          <h2>Los Angeles 🇺🇸</h2>
-          <div class="date">February 1st 2024</div>
-          <div class="time">9:14:29 AM</div>
-          <h2>Melbourne 🇦🇺</h2>
-          <div class="date">February 1st 2024</div>
-          <div class="time">9:14:29 AM</div>
+          <div>
+            <h2>Los Angeles 🇺🇸</h2>
+            <div class="date">February 1st 2024</div>
+          </div>
+          <div>
+            <div class="time">9:14:29 <small>AM</small></div>
+          </div>
+        </div>
+
+        <div class="cities">
+          <div>
+            <h2>Paris 🇫🇷</h2>
+            <div class="date">February 1st 2024</div>
+          </div>
+          <div>
+            <div class="time">9:14:29 <small>AM</small></div>
+          </div>
         </div>
       </main>
     </div>
