--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
           <option value="Kolkata">Kolkata</option>
         </select>
 
-        <div class="cities">
+        <div class="cities" id="los-angeles">
           <div>
             <h2>Los Angeles 🇺🇸</h2>
-            <div class="date">February 1st 2024</div>
+            <div class="date"></div>
           </div>
           <div>
-            <div class="time">9:14:29 <small>AM</small></div>
+            <div class="time"></div>
           </div>
         </div>
 
-        <div class="cities">
+        <div class="cities" id="paris">
           <div>
             <h2>Paris 🇫🇷</h2>
-            <div class="date">February 1st 2024</div>
+            <div class="date"></div>
           </div>
           <div>
-            <div class="time">9:14:29 <small>AM</small></div>
+            <div class="time"></div>
           </div>
         </div>
       </main>
