--- a/index.html
+++ b/index.html
@@ -14,30 +14,32 @@
         <h1>World Clock</h1>
       </header>
       <main>
-        <select>
+        <select id="city">
           <option value="">Select a city</option>
-          <option value="New York">New York</option>
-          <option value="London">London</option>
-          <option value="Kolkata">Kolkata</option>
+          <option value="America/New_York">New York</option>
+          <option value="Europe/London">London</option>
+          <option value="Asia/Kolkataa">Kolkata</option>
         </select>
 
-        <div class="cities" id="los-angeles">
-          <div>
-            <h2>Los Angeles 🇺🇸</h2>
-            <div class="date"></div>
+        <div id="cities">
+          <div class="city" id="los-angeles">
+            <div>
+              <h2>Los Angeles 🇺🇸</h2>
+              <div class="date"></div>
+            </div>
+            <div>
+              <div class="time"></div>
+            </div>
           </div>
-          <div>
-            <div class="time"></div>
-          </div>
-        </div>
 
-        <div class="cities" id="paris">
-          <div>
-            <h2>Paris 🇫🇷</h2>
-            <div class="date"></div>
-          </div>
-          <div>
-            <div class="time"></div>
+          <div class="city" id="paris">
+            <div>
+              <h2>Paris 🇫🇷</h2>
+              <div class="date"></div>
+            </div>
+            <div>
+              <div class="time"></div>
+            </div>
           </div>
         </div>
       </main>
