added current location option in the dropdown

--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
       <main>
         <select id="city">
           <option value="">Select a city</option>
+          <option value="currentLocation">My location</option>
           <option value="America/New_York">New York</option>
           <option value="Europe/London">London</option>
           <option value="Asia/Kolkataa">Kolkata</option>
+          <option value="Australia/Melbourne">Melbourne</option>
+          <option value="Asia/Dubai">Dubai</option>
+          <option value="Asia/Hong_Kong">Hong Kong</option>
         </select>
 
         <div id="cities">
@@ -35,6 +39,16 @@
           <div class="city" id="paris">
             <div>
               <h2>Paris 🇫🇷</h2>
+              <div class="date"></div>
+            </div>
+            <div>
+              <div class="time"></div>
+            </div>
+          </div>
+
+          <div class="city" id="mumbai">
+            <div>
+              <h2>Mumbai 🇮🇳</h2>
               <div class="date"></div>
             </div>
             <div>
