added back to homepage link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="cities">
           <div class="city" id="los-angeles">
             <div>
-              <h2>Los Angeles 🇺🇸</h2>
+              <h2>Los Angeles</h2>
               <div class="date"></div>
             </div>
             <div>
@@ -38,7 +38,7 @@
 
           <div class="city" id="paris">
             <div>
-              <h2>Paris 🇫🇷</h2>
+              <h2>Paris</h2>
               <div class="date"></div>
             </div>
             <div>
@@ -48,7 +48,7 @@
 
           <div class="city" id="mumbai">
             <div>
-              <h2>Mumbai 🇮🇳</h2>
+              <h2>Mumbai</h2>
               <div class="date"></div>
             </div>
             <div>
@@ -57,7 +57,11 @@
           </div>
         </div>
       </main>
+      <div class="home-page-link">
+        <a href="/">Back to Homepage</a>
+      </div>
     </div>
+
     <footer>
       <p>
         This project was coded by
