--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>World Clock</h1>
+        <h1>🌏 World Clock</h1>
       </header>
       <main>
         <select id="city">
