updated the bgc and link color

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <option value="currentLocation">My location</option>
           <option value="America/New_York">New York</option>
           <option value="Europe/London">London</option>
-          <option value="Asia/Kolkataa">Kolkata</option>
+          <option value="Asia/Kolkata">Kolkata</option>
           <option value="Australia/Melbourne">Melbourne</option>
           <option value="Asia/Dubai">Dubai</option>
           <option value="Asia/Hong_Kong">Hong Kong</option>
