--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         >
         and hosted on
         <a href="https://world-clock-cb.netlify.app/" target="_blank"
-          >Netlify</a
+          >Netlify 💖</a
         >
       </p>
     </footer>
